# shell-bun

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  TESTING_SETUP.md  build-config.txt  go.mod  package-lock.json  package.json  requirements.txt  shell-bun.cfg  shell-bun.js  shell-bun.sh  shell_bun.py  ui.js
.github/workflows/: release.yml  test.yml
cmd/shellbun/: main.go
internal/config/: config.go
internal/executor/: executor.go
internal/pattern/: pattern.go
internal/ui/: model.go
src/: config.rs  executor.rs  logger.rs  main.rs  matcher.rs  tui.rs
tests/: README.md  run_tests.py  run_tests.sh  test_ci_mode.bats  test_ci_mode.py  test_command_line.bats  test_command_line.py  test_config_parsing.bats  test_config_parsing.py  test_container_override_flag.bats  test_container_override_flag.py  test_container_working_dir.bats  test_container_working_dir.py  test_log_directory.bats  test_log_directory.py  test_pattern_matching.bats  test_pattern_matching.py  test_working_directory.bats  test_working_directory.py
tests/fixtures/: basic.cfg  container.cfg  error.cfg  invalid.cfg  working_dir.cfg
